[package]
name = "ddsfile"
version = "0.6.0"
authors = [
  "Mike Dilger <mike@optcomp.nz>",
  "Connor Fitzgerald <connorwadefitzgerald@gmail.com>",
]
description = "DirectDraw Surface file format parser/composer"
repository = "https://github.com/cwfitzgerald/ddsfile"
documentation = "https://docs.rs/ddsfile"
license = "MIT"
keywords = ["dds"]
categories = ["parsing", "game-development", "graphics"]
readme = "README.md"
edition = "2021"
rust-version = "1.73"

[dependencies]
bitflags = "2.4"
byteorder = "1.5"
enum-primitive-derive = "0.3"
num-traits = "0.2"
